# nemoclaw-nix

./: .gitignore  README.md  flake.nix  pyproject.toml
docs/: dgx-spark-runbook.md  spark-vllm-qualification.md
nix/: hermes-nixclaw-policy.yaml  hermes-nixclaw.dockerfile  module.nix  nemoclaw.nix  nixclaw-agent  nixclaw-module.nix  nixclaw-platform.nix  openshell.nix  vllm-module.nix  vllm.nix
src/nixclaw_platform/: __init__.py  activator.py  broker.py  common.py  ctl.py
tests/: test_platform.py
vllm/: pyproject.toml
